--- a/.github/workflows/cluster_setup.yaml
+++ b/.github/workflows/cluster_setup.yaml
@@ -19,9 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: create branch
         run:  git checkout -b unomi-cluster-setup-${{ inputs.domain_hash }}
-      - name: working directory
-        run:  cd scripts
       - name: create cluster config files
+        working-directory: ./scripts
         run:  python create_cluster.py ${{ inputs.environment }} ${{ inputs.domain_hash }} unomi-cluster-setup-${{ inputs.domain_hash }} ${{ inputs.region }}
       - name: commit the files
         run:  git commit -am "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}"
