--- a/.github/workflows/cluster_setup.yaml
+++ b/.github/workflows/cluster_setup.yaml
@@ -28,6 +28,8 @@ jobs:
             git config user.email 'github-actions[bot]@users.noreply.github.com'
       - name: commit the files
         run:  git commit -am "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}"
+      - name: test
+        run:  git status
       - name: create a pr
         run:  gh pr create --title "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}" --body ""
         env:
