--- a/.github/workflows/cluster_setup.yaml
+++ b/.github/workflows/cluster_setup.yaml
@@ -11,8 +11,7 @@ on:
       region:
         description: AWS region
         require: true
-permissions:
-  pull-requests: write
+permissions: write-all
 jobs:
   cluster_setup:
     runs-on: ubuntu-latest
