--- a/.github/workflows/cluster_setup.yaml
+++ b/.github/workflows/cluster_setup.yaml
@@ -11,7 +11,9 @@ on:
       region:
         description: AWS region
         require: true
+
 permissions: write-all
+
 jobs:
   cluster_setup:
     runs-on: ubuntu-latest
@@ -27,14 +29,10 @@ jobs:
         run: |
             git config user.name 'github-actions[bot]'
             git config user.email 'github-actions[bot]@users.noreply.github.com'
-      - name: test
-        run: git status
       - name: commit the files
         run:  git add -A && git commit -am "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}"
       - name: push to repo
         run: git push -u origin unomi-cluster-setup-${{ inputs.domain_hash }}
-      - name: test
-        run:  git status
       - name: create a pr
         run:  gh pr create -B main -H unomi-cluster-setup-${{ inputs.domain_hash }} --title "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}" --body ""
         env:
@@ -43,3 +41,19 @@ jobs:
         run:  gh pr merge unomi-cluster-setup-${{ inputs.domain_hash }} --merge
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: cluster verification
+        run:  sleep 180
+
+  cluster_initialization:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repo checkout
+        uses: actions/checkout@v3
+      - name: scope setup
+        run:  python scripts/deployment/initialize_cluster.py -e ${{ inputs.environment }} -o scopes -d ${{ inputs.domain_hash }}
+      - name: rules setup
+        run:  python scripts/deployment/initialize_cluster.py -e ${{ inputs.environment }} -o rules -d ${{ inputs.domain_hash }}
+      - name: schema setup
+        run:  python scripts/deployment/initialize_cluster.py -e ${{ inputs.environment }} -o schemas -d ${{ inputs.domain_hash }}
+      - name: profile-properties setup
+        run:  python scripts/deployment/initialize_cluster.py -e ${{ inputs.environment }} -o profile-properties -d ${{ inputs.domain_hash }}
