--- a/.github/workflows/cluster_setup.yaml
+++ b/.github/workflows/cluster_setup.yaml
@@ -6,11 +6,22 @@ on:
         description: Domain Hash
         require: true
       environment:
+        type: choice
         description: Environment
         require: true
+        default: staging
+        options:
+          - staging
+          - prod
       region:
+        type: choice
         description: AWS region
         require: true
+        default: us
+        options:
+          - us
+          - eu
+          - ap
 
 permissions: write-all
 
@@ -32,7 +43,7 @@ jobs:
       - name: commit the files
         run:  git add -A && git commit -am "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}"
       - name: push to repo
-        run: git push -u origin unomi-cluster-setup-${{ inputs.domain_hash }}
+        run:  git push -u origin unomi-cluster-setup-${{ inputs.domain_hash }}
       - name: create a pr
         run:  gh pr create -B main -H unomi-cluster-setup-${{ inputs.domain_hash }} --title "add ${{ inputs.domain_hash }} cluster to ${{ inputs.environment }}-${{ inputs.region }}" --body ""
         env:
@@ -42,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: cluster verification
-        run:  sleep 180
+        run:  sleep 300
 
   cluster_initialization:
     needs:   cluster_setup
